Update to css body, keep body 100% visible to stop resizing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,12 @@
   padding: 0;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 /* Set a background image for the body */
 body {
   background: url('../images/background.jpg') no-repeat center center fixed;
